# warungonline

./: README.md  pyproject.toml  start.py
src/: app.py  db.py  di.py  entities.py
src/templates/: base.html  index.html  new_product.html  product_detail.html  products.html  users.html
warungonline/: app.py  cli.py  db.py  di.py
warungonline/templates/: base.html  index.html  login.html  new_product.html  products.html  register.html  users.html
